--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -1,6 +1,7 @@
-<div class="container__input">
-  <mat-spinner *ngIf="isDataLoading" class="loading"></mat-spinner>
-  <mat-form-field class="example-form-field" *ngIf="!isDataLoading">
+<mat-spinner *ngIf="isDataLoading" ></mat-spinner>
+<div class="container__input" *ngIf="!isDataLoading">
+  
+  <mat-form-field class="example-form-field" >
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" [(ngModel)]="valueFilter" name="valueFilter">
     <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="valueFilter=''">
@@ -14,27 +15,36 @@
   </section>
 </div>
 <div class="mat-elevation-z8" *ngIf="!isDataLoading">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+  <table  mat-table [dataSource]="dataSource" matSort >
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let dealer">{{ dealer.name }}</td>
     </ng-container>
+
     <ng-container matColumnDef="amountOfCars">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> AmountOfCars </th>
-      <td mat-cell *matCellDef="let element"> {{element.amountOfCars}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Amount of cars
+      </th>
+      <td mat-cell *matCellDef="let dealer">{{ dealer.amountOfCars }}</td>
     </ng-container>
+
     <ng-container matColumnDef="headquarters">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Headquarters </th>
-      <td mat-cell *matCellDef="let element"> {{element.headquarters}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Headquarter</th>
+      <td mat-cell *matCellDef="let dealer">{{ dealer.headquarters }}</td>
     </ng-container>
+
     <ng-container matColumnDef="country">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
-      <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Country</th>
+      <td mat-cell *matCellDef="let dealer">{{ dealer.country }}</td>
     </ng-container>
+
     <ng-container matColumnDef="foundedIn">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Founded In </th>
-      <td mat-cell *matCellDef="let element"> {{element.foundedIn}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Founded in</th>
+      <td mat-cell *matCellDef="let dealer">
+        {{ dealer.foundedIn }}
+      </td>
     </ng-container>
+
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let element">
@@ -57,5 +67,8 @@
     </ng-container>
 
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" ></mat-paginator>
+  </div>
+  
 </div>
