WIP:make bug with table

--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -14,7 +14,7 @@
     </div>
   </section>
 </div>
-<div class="mat-elevation-z8" *ngIf="!isDataLoading">
+<div [hidden]="isDataLoading" class="mat-elevation-z8" >
   <table  mat-table [dataSource]="dataSource" matSort >
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
