--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -1,74 +1,75 @@
-<mat-spinner *ngIf="isDataLoading" ></mat-spinner>
-<div class="container__input" *ngIf="!isDataLoading">
-  
-  <mat-form-field class="example-form-field" >
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" [(ngModel)]="valueFilter" name="valueFilter">
-    <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="valueFilter=''">
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-form-field>
-  <section>
-    <div class="example-button-row">
-      <button mat-raised-button color="primary" (click)="openPopUp()">Add dealers</button>
-    </div>
-  </section>
-</div>
-<div [hidden]="isDataLoading" class="mat-elevation-z8" >
-  <table  mat-table [dataSource]="dataSource" matSort >
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let dealer">{{ dealer.name }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="amountOfCars">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Amount of cars
-      </th>
-      <td mat-cell *matCellDef="let dealer">{{ dealer.amountOfCars }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="headquarters">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Headquarter</th>
-      <td mat-cell *matCellDef="let dealer">{{ dealer.headquarters }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="country">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Country</th>
-      <td mat-cell *matCellDef="let dealer">{{ dealer.country }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="foundedIn">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Founded in</th>
-      <td mat-cell *matCellDef="let dealer">
-        {{ dealer.foundedIn }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button (click)="openPopUp(element)">
-          <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
-        </button>
-        <button (click)="delete(element)" mat-icon-button>
-          <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    <ng-container>
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="10">
-          Dealer not found.
-        </td>
-      </tr>
-    </ng-container>
-
-  </table>
-  <div>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" ></mat-paginator>
+<div class="container">
+  <mat-spinner *ngIf="isDataLoading"  class="loading"></mat-spinner>
+  <div class="container__input" *ngIf="!isDataLoading">
+    <mat-form-field class="example-form-field" >
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" [(ngModel)]="valueFilter" name="valueFilter">
+      <button mat-button *ngIf="valueFilter" matSuffix mat-icon-button aria-label="" (click)="valueFilter=''">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+    <section>
+      <div class="example-button-row">
+        <button mat-raised-button color="primary" (click)="openPopUp()">Add dealers</button>
+      </div>
+    </section>
   </div>
+  <div [hidden]="isDataLoading" class="mat-elevation-z8" >
+    <table  mat-table [dataSource]="dataSource" matSort >
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let dealer">{{ dealer.name }}</td>
+      </ng-container>
   
+      <ng-container matColumnDef="amountOfCars">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Amount of cars
+        </th>
+        <td mat-cell *matCellDef="let dealer">{{ dealer.amountOfCars }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="headquarters">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Headquarter</th>
+        <td mat-cell *matCellDef="let dealer">{{ dealer.headquarters }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="country">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Country</th>
+        <td mat-cell *matCellDef="let dealer">{{ dealer.country }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="foundedIn">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Founded in</th>
+        <td mat-cell *matCellDef="let dealer">
+          {{ dealer.foundedIn }}
+        </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button (click)="openPopUp(element)">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
+          </button>
+          <button (click)="delete(element)" mat-icon-button>
+            <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <ng-container>
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="10">
+            Dealer not found.
+          </td>
+        </tr>
+      </ng-container>
+  
+    </table>
+    <div>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" ></mat-paginator>
+    </div>
+    
+  </div>
 </div>
