--- a/src/app/dealers/table/table.component.scss
+++ b/src/app/dealers/table/table.component.scss
@@ -1,28 +1,30 @@
-.container__input{
-  width: 1150px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.container{
   .loading{
     margin-top: 200px;
-    margin-left: 500px;
   }
-  .mat-form-field{
-    width: 200px;
-    font-size: 14px;
+  .container__input{
+    width: 1150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    .mat-form-field{
+      width: 200px;
+      font-size: 14px;
+    }
+    .example-button-row {
+      display: table-cell;
+    }
+    .example-button-row .mat-button-base {
+      margin: 8px 8px 8px 0;
+    } 
   }
-  .example-button-row {
-    display: table-cell;
+  .mat-table{
+    width: 1150px;
+    height: 100%;
+    td, th{
+      width: 15%;
+    }
   }
-  .example-button-row .mat-button-base {
-    margin: 8px 8px 8px 0;
-  } 
+  
+  
 }
-.mat-table{
-  width: 1150px;
-  height: 100%;
-  td, th{
-    width: 15%;
-  }
-}
-
