WIP: add style spiner

--- a/src/app/shared-components/details-car/details-car.component.scss
+++ b/src/app/shared-components/details-car/details-car.component.scss
@@ -10,6 +10,7 @@
     width: 600px;
     height: 400px;
     padding-top: 20px;
+    color: #fff;
     img{
       width: 600px;
       height: 400px;
