--- a/src/app/shared-components/car-form/car-form.component.html
+++ b/src/app/shared-components/car-form/car-form.component.html
@@ -34,7 +34,7 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>Year</mat-label>
-    <input matInput type="text" formControlName="year">
+    <input matInput type="number" formControlName="year">
   </mat-form-field>
 
   <mat-form-field>
