WIP: refactoring menu-item

--- a/src/app/menu-item/menu-item.component.scss
+++ b/src/app/menu-item/menu-item.component.scss
@@ -16,9 +16,9 @@
   transition: .1s;
 }
 
-.menu__link:hover{
-  color: gold;
-}
+// .menu__link:hover{
+//   color: gold;
+// }
 .line-visible{
   width: 3px;
   height: 40px;
